# shitty_tetris

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Block.hpp  Board.hpp  Game.hpp  Piece.hpp  Tile.hpp  board.hpp  game.hpp  score.hpp
src/: Block.cpp  Board.cpp  Game.cpp  Piece.cpp  Tile.cpp  board.cpp  game.cpp  main  main.cpp  piece.cpp  score.cpp  tile.cpp
